# intensidad_de_la_actividad_fisica_y_el_deporte

./: Cargo.toml  Cargo_v7.toml  LICENSE  README.md  datos.csv  main.rs  main_v2.rs  main_v4.rs  main_v5.rs  main_v6.rs  main_v7.rs  mainv3.rs  respuesta.txt  resultados.txt
ml_regresionlin1 - copia/ml_regre/: convert.csv  dat10.csv  dat11.csv  dat12.csv  dat13.csv  dat14.csv  dat15.csv  dat16.csv  dat17.csv  dat18.csv  dat19.csv  dat20.csv  dat21.csv  dat22.csv  dat54.csv  dat57.csv  dat59.csv  dat60.csv  dat61.csv  dat62.csv  dat63.csv  dat64.csv  dat65.csv  dat66.csv  dat67.csv  dat8.csv  datos - copia.csv  datos.csv  datos_ant.csv  datos_muestra_aleat.xlsx  datt1 ejemplo de uso.csv  datt1.csv  datt10.csv  datt11.csv  datt12.csv  datt2.csv  datt3.csv  datt4.csv  datt5.csv  datt6.csv  (+4 more)
ml_regresionlin1 - copia/ml_regre/src/: main.rs
